--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ width: 100vw;
   left: 50vw;
   transform: translateX(-50%);
 color: #2d2d2d;
-font-size: 70px;
+font-size: 3vw;
 line-height: 20%;
 
 }
